--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ button.cancel-btn:hover {
 
   .order-summary-card-container {
     max-width: 87.5%;
+    max-height: 87.5%
   }
 
   .text-content {
