--- a/style.css
+++ b/style.css
@@ -125,8 +125,8 @@ button.cancel-btn:hover {
   }
 
   .order-summary-card-container {
-    max-width: 87.5%;
-    max-height: 87.5%
+    max-width: 85%;
+    max-height: 85%;
   }
 
   .text-content {
